navbar spacing fixed

--- a/src/webapp/frontend/src/css/SideNavbar.css
+++ b/src/webapp/frontend/src/css/SideNavbar.css
@@ -1,68 +1,42 @@
-/* SideNav.css */
-
+/* The sidebar menu */
 .sidenav {
+	height: 100%; /* Full-height: remove this if you want "auto" height */
+	width: 100%; /* Set the width of the sidebar */
 	position: relative;
-	background: linear-gradient(
-		to right,
-		rgba(15, 0, 45, 0.9),
-		rgba(15, 0, 45, 0.8)
-	) !important;
-	padding: 50px;
-	padding-bottom: 100%;
-	height: 100%;
-}
-.content-wrapper {
-	position: relative;
-	height: 100%;
-}
-.relative-avi-wrapper {
-	position: relative;
-	height: 200px;
-	width: 200px;
-}
-.relative-nav-wrapper {
-	position: relative;
-	height: 100%;
-	width: 100%;
-}
-.avatar {
-	position: absolute;
+	z-index: 1; /* Stay on top */
+	top: 0; /* Stay at the top */
 	left: 0;
-	height: 100%;
-	width: 100%;
+	background-color: #111; /* Black */
+	overflow-x: hidden; /* Disable horizontal scroll */
+	padding-top: 20px;
 }
-.avi-border {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	background: #360033; /* fallback for old browsers */
-	background: -webkit-linear-gradient(
-		to right,
-		#0b8793,
-		#360033
-	); /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(
-		to right,
-		#0b8793,
-		#360033
-	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	animation: border-spin infinite 10s linear;
+
+/* The navigation menu links */
+.sidenav a {
+	padding: 6px 8px 6px 16px;
+	text-decoration: none;
+	font-size: 25px;
+	color: #818181;
+	display: block;
 }
-.initial {
-	font-size: 50px;
-	height: 50px;
-	color: white;
-	font-family: "Helvetica";
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover {
+	color: #f1f1f1;
 }
-.name {
-	font-size: 32px;
-	color: white;
+
+/* Style page content */
+.main {
+	margin-left: 160px; /* Same as the width of the sidebar */
+	padding: 0px 10px;
 }
-@keyframes border-spin {
-	from {
-		transform: rotate(0deg);
+
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+	.sidenav {
+		padding-top: 15px;
 	}
-	to {
-		transform: rotate(360deg);
+	.sidenav a {
+		font-size: 18px;
 	}
 }
